GIT COMMIT to master_new01 Login, Register Test

--- a/JPA-Spring-Project-NewBranch/src/main/resources/application.yml
+++ b/JPA-Spring-Project-NewBranch/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.MySQL57Dialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL57Dialect
