--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/path.yml
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/src/main/resources/path.yml
@@ -1,7 +1,8 @@
 spring:
   thymeleaf:
     prefix: classpath:templates/
-    suffix: .html
+#    suffix: .html
+    suffix: .jsp
     cache: false
 #페이지 개수 설정
 page:
