--- a/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/build.gradle
+++ b/JPA-Spring-Project-master_new01/JPA-Spring-Project-NewBranch/build.gradle
@@ -32,8 +32,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation "org.apache.tomcat.embed:tomcat-embed-jasper"	// 톰캣이 jsp 파일을 컴파일 할 수 있도록 도움 주는 라이브러리
-	implementation group: 'org.glassfish.web', name: 'jakarta.servlet.jsp.jstl', version: '2.0.0'	// jstl 사용 위한 라이브러리
+//	implementation "org.apache.tomcat.embed:tomcat-embed-jasper"	// 톰캣이 jsp 파일을 컴파일 할 수 있도록 도움 주는 라이브러리
+//	implementation group: 'org.glassfish.web', name: 'jakarta.servlet.jsp.jstl', version: '2.0.0'	// jstl 사용 위한 라이브러리
 }
 
 tasks.named('test') {
